Optimization is Constructed
Given the observed flow, I can optimize the iterative pose.
However, computing the norm of residual takes time on CPU (70msec).
Now, I will compute the residual term in GPU

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,12 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "__nullptr": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "__bit_reference": "cpp",
+        "__functional_base": "cpp",
+        "__node_handle": "cpp",
+        "__memory": "cpp",
+        "filesystem": "cpp",
+        "locale": "cpp"
     }
 }
