Analyitical Jacobean is Computed
I have varified that I can compute the analytical Jacobean
and compared it with numerical derivative.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,11 @@
         "__node_handle": "cpp",
         "__memory": "cpp",
         "filesystem": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "ranges": "cpp",
+        "__hash_table": "cpp",
+        "__tree": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
